--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1 data-aos="fade-up">Meenaaz Investment</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">All the products you need in one place</h2>
+          <h2 data-aos="fade-up" data-aos-delay="400">HEALTHY AND GREAT TASTING</h2>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left" data-aos-delay="200">
           <img src="assets/img/shopping.jpg" class="img-fluid animated" alt="">
